# mnemosyne

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.ai/: README.md  claims.yaml
.ai/claims/: 0001-agent-directives.md  0002-local-deploy-infra.md  0003-build-on-top.md  0004-api-and-mcp.md  0005-api-first-no-cli-v0.md  0006-global-person-identity.md  0007-provisional-relations.md  0008-generated-meeting-id.md  0009-sync-ingest-async-enrichment.md  0010-manual-notes-first.md  0011-single-user-v0.md  0012-medical-in-scope-personal.md  0013-relation-states-deferred.md  0014-v0-runtime-api-arango-only.md  0015-arango-first-media-later.md  0016-media-storage-deferred-ai-pipeline.md  0017-admin-cli-via-api.md  0018-system-collections-non-client-writable.md  0019-v0-basic-collections.md  0020-api-sanitization-and-stamping.md  0021-edge-verb-naming-standard.md  0022-note-about-vs-mentions.md  0023-claims-persistence-discipline.md  0024-notes-can-target-follow-ups-and-entities.md  0025-purchase-inventory-separation.md  0026-owned-item-per-physical-item.md  0027-owned-item-disposal-lifecycle.md  (+29 more)
app/: __init__.py  dependencies.py  main.py  mcp_client.py  mcp_server.py  settings.py
app/handler/: notes.py
db/: schema.arcadesql  schema.surql  seed.surql  views.surql
docs/: alpha-api-contract.md  alpha-error-model.md  alpha-model.md  arcadedb-schema-design.md
tests/: conftest.py  test_access_context_api.py  test_access_policy.py  test_app.py  test_arcadedb_schema.py  test_audit.py  test_entities_api.py  test_feature_flags.py  test_mcp_server.py  test_notes_api.py  test_notes_repository_arango.py  test_notes_service.py  test_notes_surreal_repository.py  test_observations_api.py  test_observations_arcade_repository.py  test_observations_in_memory.py  test_observations_model.py  test_storage_bootstrap.py  test_surrealql_import_files.py
(+63 files in other folders)
