[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemosyne"
version = "0.1.0"
description = "Personal memory and provenance substrate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "pydantic",
  "pydantic-settings",
  "python-arango",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
package = true
