[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemosyne"
version = "0.1.0-alpha"
description = "A note-first memory API for humans and agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = true
