[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemosyne"
version = "0.1.0-alpha"
description = "A truth-center API for observations and user-life facts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.0",
  "mcp>=1.12.0,<2",
]

[project.scripts]
mnemosyne-mcp = "app.mcp_server:main"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = true
